MDEV-36979 Same alias name with different case on same table is not working in functions

table keys {db,table,alias} must be compared with table_alias_charset